--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,23 @@
 :root {
+
+    /* height */
     --foot-height: 100px;
     --upgrade-height: 80px;
-    --nav-height: 50px;
+    --nav-height: 65px;
+    --row-height: 290px;
+    
+
+    /* text-size */
+    --h1-text-size: 2em;
+    --h2-text-size: 1.4em;
+    --span-text-size: 1.2em;
 }
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    color: white;
 }
 
 html {
@@ -64,9 +74,6 @@ html {
     justify-content: center;
 }
 
-.box-center {
-    justify-content: center;
-}
 
 /* end flex */
 
@@ -74,34 +81,42 @@ html {
 
 /* container */
 
+body {
+    background-color: #141922;
+}
+
 header {
     height: calc(100vh - var(--foot-height));
     width: 10%;
-    background-color: coral;
+    background-color: black;
 }
 
 main {
-    background-color: cyan;
+    background-color: transparent;
     width: 90%; 
+}
+
+main > div:last-child {
     overflow: auto;
 }
 
 footer {
     height: var(--foot-height);
     width: 100%;
-    background-color: darkgreen;
+    background-color: #282828;
     bottom: 0;
     z-index: 1;
 }
 
 .upgrade {
     height: var(--upgrade-height);
-    background-color: violet;
+    background-color: #080b12;
+    width: 100%;
 }
 
 .nav {
     height: var(--nav-height);
-    background-color: wheat;
+    background-color: transparent;
 }
 
 .container {
@@ -109,21 +124,52 @@ footer {
     padding: 10px;
 }
 
-.row-primary {
-    width: 100%;
-    background-color: brown;
-    min-height: calc(var(--foot-height) * 2.5);
-    margin-bottom: 0.5em;
-}
-
 .row {
     width: 100%;
-    height: 200px;
     background-color: brown;
     margin-top: 1.5em;
+    gap: 20px;
 }
 
 /* end container */
+
+
+
+/* card */
+
+.card {
+    background-color: blue;
+    width: 100%;
+    max-width: calc(100% / 6 - (20px * 5));
+}
+
+.image {
+    flex-basis: 100%;
+}
+
+.image img {
+    width: 100%;
+}
+
+.description {
+    flex-basis: 100%;
+}
+
+.description span {
+    display: block;
+    text-align: center;
+    margin-bottom: 0.4em;
+}
+
+.description > span:first-child {
+    margin: 1em 0 0.5em 0;
+    font-size: var(--span-text-size);
+    font-weight: 400;
+    color: white;
+}
+
+
+/* end card */
 
 
 
@@ -131,12 +177,18 @@ footer {
 
 h1 {
     padding: 5px 0;
+    font-size: var(--h1-text-size);
     font-weight: 700;
 }
 
+h2 {
+    font-size: var(--h2-text-size);
+}
+
 span {
-    font-size: 1.2em;
+    font-size: calc(var(--span-text-size) - 5px);
     font-weight: 400;
+    color: #77797e;
 }
 
 /* text */
@@ -168,8 +220,10 @@ ul li a{
 .btn-primary {
     top: 27%;
     right: 2%;
-    background-color: white;
+    background-color: transparent;
     padding: 10px 30px;
+    border: 2px solid white;
+    border-radius: 30px;
     z-index: 999;
 }
 
