--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,28 @@ html {
     font-family: 'Balsamiq Sans', cursive;
 }
 
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: grey; 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #b30000; 
+  }
+
 
 
 /* commun uses */
@@ -144,12 +166,12 @@ footer {
 
 .playlist {
     overflow: auto;
+    min-height: 100px;
 }
 
 .nav-footer {
     margin-top: auto;
 }
-
 /* end container */
 
 
@@ -227,7 +249,7 @@ ul {
     height: 40px;
 }
 
-.container-nav li button {
+.container-nav button {
     background-color: transparent;
     border: none;
     justify-content: start;
@@ -269,11 +291,11 @@ ul {
     font-size: 1.4em;
 }
 
-.playlist ul li:first-of-type {
+.playlist > button {
     margin: 10px 0 30px 0;
 }
 
-.playlist ul li:first-of-type span {
+.playlist > button span {
     width: 80%;
     padding-left: 1.5em;
 }
@@ -281,6 +303,7 @@ ul {
 .nav ul {
     gap: 20px;
     flex-basis: 100px;
+    overflow: auto;
 }
 
 .nav ul li a{
