--- a/css/style.css
+++ b/css/style.css
@@ -383,23 +383,23 @@ footer {
 }
 
 .music {
-    justify-content: center;
-    column-gap: 20px
+    display: inline-flex;
+    width: 25%;
+    align-items: center;
+    column-gap: 10px;
 }
 
-.music .music-image {
-    height: 50px;
-    width: 50px;
+.music-image {
+    width: 10%;
     margin-left: 15px;
 }
 
 .music img {
-    height: 100%;
+    width: 100%;
 }
 
 .music-name {
     height: 80px;
-    justify-content: center;
     padding-right: 2em;
 }
 
@@ -408,7 +408,13 @@ footer {
 }
 
 .save-music {
-    gap: 10px
+    height: 100%;
+}
+
+.save-music {
+    align-items: center;
+    column-gap: 15px;
+    font-size: var(--span-text-size);
 }
 
 .duration {
@@ -434,22 +440,60 @@ footer {
 }
 
 .bar {
-    height: 5px;
-    width: 80%;
     background-color: gray;
 }
 
 .bar .fr {
-    height: 100%;
-    width: 65%;
     background-color: #5a5a5a;
 }
 
 .bar .fl {
-    height: 100%;
-    width: 35%;
     background-color: #c1c1c1;
 
+}
+
+.time-bar .bar {
+    height: 5px;
+    width: 80%;
+}
+
+.time-bar .bar .fr {
+    height: 100%;
+    width: 65%;
+}
+
+.time-bar .bar .fl {
+    height: 100%;
+    width: 35%;
+}
+
+.volume {
+    display: inline-flex;
+    width: 25%;
+    align-items: center;
+    justify-content: flex-end;
+    column-gap: 20px;
+    font-size: var(--span-text-size);
+    margin-right: 15px;
+}
+
+.volume-bar {
+    width: 35%;
+}
+
+.volume .bar {
+    height: 5px;
+    width: 100%;
+}
+
+.volume .bar .fr {
+    height: 100%;
+    width: 65%;
+}
+
+.volume .bar .fl {
+    height: 100%;
+    width: 35%;
 }
 
 .thumb {
@@ -460,6 +504,10 @@ footer {
     background-color: orange;
     top: -3.5px;
     right: 0;
+}
+
+.volume {
+    align-items: center;
 }
 
 /* end controller */
