--- a/css/responsive.css
+++ b/css/responsive.css
@@ -100,27 +100,20 @@
         align-items: center;
     }
 
-    .nav-footer button {
-        justify-content: center;
-        width: 80%;
-        margin-left: auto;
-        margin-right: auto;
+    .nav-footer ul {
+        align-content: center;
     }
 
     .nav-footer li:first-child {
         border-bottom: 0;
     }
 
-    .nav-footer li:first-child button {
-        width: 50px;
-    }
-
     .nav-footer li:first-child img {
-        width: 100%;
+        height: 26px;
     }
 
     .nav-footer li:last-child button {
-        padding: 3px 12px 3px 5px;
+        padding: 3px 5px 3px;
         border-radius: 20px;
         background-color: gray;
     }
@@ -143,7 +136,11 @@
     }
 
     .card {
-        flex-basis: 100%%;
+        flex-basis: 100%;
+    }
+
+    .music {
+        column-gap: 10px;
     }
 
     .time-bar .bar {
