--- a/css/responsive.css
+++ b/css/responsive.css
@@ -39,6 +39,10 @@
         height: calc(100vh - (var(--upgrade-height) + 110px + var(--foot-height)));
     }
 
+    .container > div:first-child h1 {
+        margin-top: 1em;
+    }
+
     footer {
         column-gap: 15px;
     }
@@ -113,7 +117,8 @@
         height  : 100%;
         width   : 1px;  
         border-left:1px solid rgb(94, 255, 0);
-        display: none;
+        opacity: 0;
+        transition: 0.3s;
      }
 
     .nav-footer ul {
