--- a/css/responsive.css
+++ b/css/responsive.css
@@ -101,6 +101,10 @@
         width: calc(100% - 45px); 
     }
 
+    .navigation button {
+        width: 45px;
+    }
+
     .row {
         flex-wrap: wrap;
     }
@@ -109,15 +113,8 @@
         align-items: center;
     }
 
-    .navigation ul li:before {
-        content : "";
-        position: absolute;
-        left    : -19%;
-        bottom  : 0;
-        height  : 100%;
-        width   : 1px;  
-        border-left:1px solid rgb(94, 255, 0);
-        opacity: 0;
+    .navigation ul li button { 
+        border-left: 1px transparent rgb(94, 255, 0);
         transition: 0.3s;
      }
 
