--- a/css/responsive.css
+++ b/css/responsive.css
@@ -75,7 +75,8 @@
     }
 
     .card {
-        flex-basis: calc(50% - 10px);
+        flex-basis: calc(50% - 5px);
+        max-width: 100%;
     }
 
     .time-bar .bar {
@@ -89,7 +90,7 @@
 
 }
 
-@media screen and (max-width: 610px) {
+@media screen and (max-width: 600px) {
    
     header {
         width: 45px;
